fix scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -65,5 +65,5 @@ body {
 }
 
 .cm-editor {
-    height: 100%;
+    height: 100dvh;
 }
